[package]
name = "sets"
version = "1.1.2"
authors = ["Libor Spacek"]
edition = "2021"
description = "Generic vectors as sets. Efficiently sorting, merging, ranking, searching, reversing, intersecting, etc."
readme = "README.md"
homepage = "https://github.com/liborty/sets"
repository = "https://github.com/liborty/sets"
license = "Apache-2.0"
keywords = ["set-operations","hash-sort","merge-sort","binary-search","ranking"]
categories = ["algorithms","rust-patterns","simulation","data-structures","mathematics"]
include = [
    "src/*.rs",
    "tests/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dependencies]
indxvec = "^1"
